# lodge_classifier

./: .gitignore  GEMINI.md  README.md
data/: taxonomy.md
lodge_classifier/: .gitignore  README.md  pyproject.toml  sample_input.csv
lodge_classifier/data/: taxonomy.md
lodge_classifier/data/dicts/: botanical.csv  building_terms.csv  buildings_estates.csv  cities_and_towns.csv  classical_greek.csv  classical_latin.csv  edu_terms.csv  fraternal_terms.csv  french_tokens.csv  global_places.csv  job_terms.csv  landmarks.csv  latin_tokens.csv  myth_terms.csv  nationality_terms.csv  philosophical_terms.csv  religious_person_terms.csv  religious_place_terms.csv  royal_titles.csv  special_interests.csv  virtues.csv  welsh_markers.csv
lodge_classifier/data/dicts/abs/: temporal_terms.csv  virtues.csv
lodge_classifier/data/dicts/grp/: masonic_terms.csv  military_terms.csv  nationality_terms.csv  special_interests.csv
lodge_classifier/data/dicts/language/: english_tokens.csv  french_tokens.csv  german_tokens.csv  greek_tokens.csv  italian_tokens.csv  japanese_tokens.csv  latin_tokens.csv  portuguese_tokens.csv
lodge_classifier/data/dicts/loc/: global_places.csv  regions.csv
lodge_classifier/data/dicts/prs/: myth_terms.csv  people.csv  royal_titles.csv
lodge_classifier/data/manual/: manual_curation_template.csv
lodge_classifier/prep/: clean_classified_file.py
lodge_classifier/src/lodge_classifier/: normalise.py  pipeline.py
lodge_classifier/src/lodge_classifier/dicts/: cache.py
lodge_classifier/tests/: test_normalise_lodge_names.py
prep/: clean_os_input.py  (+2 more)
(+120 files in other folders)
